--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
     "bootstrap": "^4.0.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tanvi1801/bootstrap.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tanvi1801/bootstrap/issues"
+  },
+  "homepage": "https://github.com/tanvi1801/bootstrap#readme"
 }
